--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -217,6 +217,14 @@
                                     <option value="고양">고양</option>
                                     <option value="광주">광주</option>
                                     <option value="시흥">시흥</option>
+                                    <option value="군포">군포</option>
+                                    <option value="평택">평택</option>
+                                    <option value="성남">성남</option>
+                                    <option value="천안">천안</option>
+                                    <option value="거제">거제</option>
+                                    <option value="부산">부산</option>
+                                    <option value="창원">창원</option>
+                                    <option value="의왕">의왕</option>
                                 </select>
                             </div>
                             <div class="mb-3">
