--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -123,7 +123,16 @@
 <script type="module">
 
     window.onload = function() {
+        // 로그인 버튼 클릭 시 로그인 함수 호출
         document.querySelector("#btnLogin").onclick = login;
+
+        // Enter 키 입력 시 로그인 함수 호출
+        document.querySelector("#loginForm").addEventListener("keydown", function(event) {
+            if (event.key === "Enter") {
+                console.log('enter')
+                login();
+            }
+        });
     }
 
     async function login() {
@@ -162,4 +171,3 @@
 </script>
 </body>
 </html>
-
