--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -162,8 +162,8 @@
             const board = document.createElement('div');
             board.className = 'board';
 
-            const pendingRequests = data.response.content.filter(item => item.requestStatus === 'A02-020');
-            const otherRequests = data.response.content.filter(item => item.requestStatus !== 'A02-020');
+            const pendingRequests = data.response.content.filter(item => item.requestStatusCodeKey === 'A02-020');
+            const otherRequests = data.response.content.filter(item => item.requestStatusCodeKey !== 'A02-020');
 
             pendingRequests.forEach(item => {
                 const requestCard = createRequestCard(item, true);
@@ -195,8 +195,8 @@
         <button class="btn btn-light btn-custom  view-details" onclick="openUserModal(${item.userId})">프로필</button>
         <div>
             ${isPending ? `
-                <button class="btn btn-custom btn-approved" onclick="updateRequest(${item.requestTypeCodeKey}, 'A02-010')">승인</button>
-                <button class="btn btn-custom btn-rejected" onclick="updateRequest(${item.requestTypeCodeKey}, 'A02-030')">거부</button>
+                <button class="btn btn-custom btn-approved" onclick="updateRequest(${item.userId}, 'A02-010')">승인</button>
+                <button class="btn btn-custom btn-rejected" onclick="updateRequest(${item.userId}, 'A02-030')">거부</button>
             ` : `
                 <button class="btn btn-custom ${item.requestTypeCodeKey === 'A02-030' ? 'btn-danger' : 'btn-success'}" disabled>
                     ${item.requestTypeCodeKey === 'A02-030' ? '거부' : item.requestTypeCodeKey === 'A02-010' ? '완료' : '처리 완료'}
@@ -246,7 +246,7 @@
         try {
             const response = await sendRequestWithToken(`http://localhost:8080/api/profiles/${requestId}`, 'PUT', {
                 'Content-Type': 'application/json',
-            }, JSON.stringify({ requestStatus: status }));
+            }, JSON.stringify({ requestStatusCodeKey: status }));
 
             if (response.ok) {
                 alert(`요청이 ${status}로 업데이트되었습니다.`);
